// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnmatchButton renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFCFA",
      "borderRadius": 9999,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "width": 156,
    }
  }
>
  <Text
    allowFontScaling={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "color": "#DF321F",
          },
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.5,
            "lineHeight": 24,
            "minWidth": 96,
            "paddingLeft": 8,
            "paddingRight": 8,
            "textAlign": "center",
            "textTransform": "uppercase",
          },
        ],
      ]
    }
  >
    unmatch
  </Text>
  <test-file-stub
    fill="#DF321F"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 16,
          "width": 16,
        },
        false,
      ]
    }
  />
</View>
`;

exports[`UnmatchButton should show the undo button if not yet matched 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "minWidth": 156,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-start",
        "overflow": "hidden",
        "width": 156,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFCFA",
          "borderRadius": 9999,
          "flexDirection": "row",
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": 156,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#2B1911",
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 14,
                "letterSpacing": 0.5,
                "lineHeight": 24,
                "minWidth": 96,
                "paddingLeft": 8,
                "paddingRight": 8,
                "textAlign": "center",
                "textTransform": "uppercase",
              },
            ],
          ]
        }
      >
        undo
      </Text>
      <test-file-stub
        fill="#2B1911"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "height": 16,
              "width": 16,
            },
            false,
          ]
        }
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFCFA80",
        "borderRadius": 9999,
        "flexDirection": "row",
        "height": 40,
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 16,
        "paddingRight": 16,
        "position": "absolute",
        "width": 156,
      }
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#2B1911",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "minWidth": 96,
              "paddingLeft": 8,
              "paddingRight": 8,
              "textAlign": "center",
              "textTransform": "uppercase",
            },
          ],
        ]
      }
    >
      undo
    </Text>
    <test-file-stub
      fill="#2B1911"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 16,
            "width": 16,
          },
          false,
        ]
      }
    />
  </View>
</View>
`;
